--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container-header">
         
         <div class="header-logo">
-            <img src="assets/LOGO-removebg-preview.png" alt="Logo da Empresa">
+            <img src="assets/LOGO.jpg" alt="Logo da Empresa">
         </div>
         
         <h1>Intranet de Convênios</h1>
