Atualizações de RO e Consignatária
Atualizações de RO e Consignatária

--- a/index.html
+++ b/index.html
@@ -25,11 +25,19 @@
         <input type="text" id="search-bar" placeholder="Buscar por cidade ou estado...">
     </div>
     
-    <div class="filter-container" id="filter-container">
-        <button class="filter-btn active" data-filter="todos">Todos</button>
+    <div class="filter-container" id="status-filter-container">
+        <button class="filter-btn active" data-filter="todos">Todos os Status</button>
         <button class="filter-btn" data-filter="Ativo">Ativos</button>
         <button class="filter-btn" data-filter="Inativo">Inativos</button>
     </div>
+
+    <div class="filter-container" id="product-filter-container">
+        <button class="filter-btn active" data-filter="todos">Todos os Tipos</button>
+        <button class="filter-btn" data-filter="DIGI+">DIGI+</button>
+        <button class="filter-btn" data-filter="HBI">HBI</button>
+        <button class="filter-btn" data-filter="STARCARD">STARCARD</button>
+        <button class="filter-btn" data-filter="AMB">AMB</button>
+        </div>
 
     <div class="grid-container" id="city-grid">
         </div>
